Fixed text-wrap for text in p html elements on search page

--- a/css/samplegrid.css
+++ b/css/samplegrid.css
@@ -24,8 +24,6 @@
 /* Small box top left of image */
 .counter {
     position: absolute;
-    width: max-content;
-    height: 27px;
     background-color: rgba(255,255,255,0.9);
     border: 2px solid grey;
 }
@@ -34,16 +32,14 @@
 .counter p {
     font-weight: bold;
     padding: 0px 5px;
-    margin-left: -1px;
+    margin-bottom: 0;
 }
 
 
 /* White overlay when you hover over image */
 .overlay {
     position: relative;
-    top: 0;
     height: 100%;
-    width: 100%;
     background-color: rgba(255,255,255,0.8);
     display:none;
     /*
@@ -74,6 +70,7 @@
     font-size: calc(20px + 0.2vw);
     font-weight: bold;
     padding: 4px 5px 5px 4px;
+    max-width: 80%;
 }
 
 /* Button size */
@@ -157,27 +154,39 @@
 }
 
 /* How many images to display per row */
-@media screen and (min-width: 400px) {
+@media screen and (min-width: 300px) {
+    .square-grid .cell {
+        width: calc(100% / 1);
+    }
+    .counter {
+        max-width: calc(100% / 1);
+    }
+}
+
+@media screen and (min-width: 600px) {
     .square-grid .cell {
         width: calc(100% / 2);
     }
-}
-
-@media screen and (min-width: 700px) {
-    .square-grid .cell {
-        width: calc(100% / 3);
+    .counter {
+        max-width: calc(100% / 2 - 8px);
     }
 }
 
-@media screen and (min-width: 900px) {
+@media screen and (min-width: 800px) {
     .square-grid .cell {
         width: calc(100% / 3);
     }
+    .counter {
+        max-width: calc(100% / 3 - 8px);
+    }
 }
 
-@media screen and (min-width: 1100px) {
+@media screen and (min-width: 1000px) {
     .square-grid .cell {
         width: calc(100% / 4);
+    }
+    .counter {
+        max-width: calc(100% / 4 - 8px);
     }
 }
 
@@ -185,10 +194,16 @@
     .square-grid .cell {
         width: calc(100% / 5);
     }
+    .counter {
+        max-width: calc(100% / 5 - 8px);
+    }
 }
 
 @media screen and (min-width: 1500px) {
     .square-grid .cell {
         width: calc(100% / 6);
+    }
+    .counter {
+        max-width: calc(100% / 6 - 8px);
     }
 }
